# angent

./: .env.template  .gitignore  Devpost description.md  Judging criteria.md  Luma Description.md  README.md  available.json  check_connectors.py  connect_gmail.ps1  flowchart.md  pyproject.toml  requirements.txt  test_airbyte.py
.kiro/skills/langfuse/: SKILL.md
.kiro/skills/langfuse/references/: instrumentation.md
.kiro/specs/angent/: .config.kiro  design.md  requirements.md  tasks.md
angent/: __init__.py  checkpoint12_demo.py  checkpoint7_demo.py  config.py  demo_config.py  email_sender.py  main.py  models.py  publisher.py  test_demo_config.py
angent/agents/: __init__.py  optimizer.py  qualifier.py  scanner.py  writer.py
angent/governance/: __init__.py  gate.py
angent/loop/: __init__.py  control_loop.py  planner.py  server.py  validation.py
angent/observability/: __init__.py  llm.py  logging.py  test_logging.py  test_tracing.py  tracing.py
angent/persistence/: __init__.py  clickhouse.py
angent/scoring/: __init__.py  pioneer.py  scorer.py
angent/sending/: __init__.py  sender.py
genui-chat-app/: .impeccableignore  impeccable.config.json  package-lock.json  package.json
genui-chat-app/src/app/: page.tsx
genui-chat-app/src/components/: component-classification.ts
genui-chat-app/src/components/openui/: CompanyDeepDive.tsx  SurfaceErrorBanner.tsx  ThesisChat.tsx  openuiSurface.ts
guild/: orchestrator.ts
x402-test/: buyer.mjs  check_balance.mjs  deal_memo_buyer.mjs  deal_memo_server.mjs  package-lock.json  package.json  server.mjs
(+6 files in other folders)
