[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "angent"
version = "0.1.0"
description = "A self-improving, goal-driven deal-sourcing agent for solo angel investors."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect>=0.7.0",
    "openai>=1.0.0",
    "langfuse>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["angent*"]
